--- a/config/settings.ini
+++ b/config/settings.ini
@@ -43,7 +43,7 @@ experience_per_level = 100
 
 # Internationalization Configuration
 default_language = en
-available_languages = en,es
+available_languages = en,es,zh
 
 # Admin Configuration - Default Admin User Settings
 default_admin_username = admin
