--- a/config/settings.ini
+++ b/config/settings.ini
@@ -17,7 +17,7 @@
 [DEFAULT]
 # Database Configuration
 # Default database URI - uses SQLite in instance directory
-database_uri = sqlite:///instance/farm.db
+database_uri = sqlite:///../instance/farm.db
 database_track_modifications = False
 
 # Security Configuration
@@ -42,7 +42,7 @@ max_level = 100
 experience_per_level = 100
 
 # Internationalization Configuration
-default_language = en
+default_language = zh
 available_languages = en,es,zh
 
 # Admin Configuration - Default Admin User Settings
@@ -58,7 +58,7 @@ default_admin_experience = 1000
 # Settings for local development
 [development]
 debug = True
-database_uri = sqlite:///D:/laughing-giggle/instance/farm_dev.db
+database_uri = sqlite:///../instance/farm_dev.db
 # Use default values for most settings in development
 
 # Production Environment
@@ -69,7 +69,7 @@ debug = False
 # Consider using environment variables instead of storing in this file
 secret_key = CHANGE-THIS-IN-PRODUCTION-USE-ENV-VAR
 password_salt = CHANGE-THIS-IN-PRODUCTION-USE-ENV-VAR
-database_uri = sqlite:///instance/farm_prod.db
+database_uri = sqlite:///../instance/farm_prod.db
 host = 0.0.0.0
 port = 5000
 
